# python-starter-project

./: README.md  pyproject.toml  tox.ini
python_starter/: string_print.py
python_starter_project/: string_print.py
scripts/: format.sh  lint.sh
tests/: test_string_print.py
