[tool.poetry]
name = "python-starter-project"
version = "0.1.0"
description = ""
authors = ["Kevin Hannon"]
license = "GPL"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
mypy = "^0.950"
flake9 = "^3.8.3"
pylint = "^2.13.8"
coverage = "^6.3.2"
tox = "^3.25.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
